Fix mobile bottom bar + disable pinch zoom on mobile

--- a/app/assets/stylesheets/pro/_pro_sidebar.scss
+++ b/app/assets/stylesheets/pro/_pro_sidebar.scss
@@ -146,11 +146,17 @@
     ul {
       display: flex;
       flex-wrap: nowrap;
+      height: 100%;
 
       li {
         position: relative;
+        padding: 0;
         height: 100%;
         width: 25%;
+
+        .admin-label {
+          display: none;
+        }
 
         img {
           width: 30px;
